--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.7",
     "file-loader": "^1.1.5",
+    "nodemon": "^1.19.1",
     "style-loader": "^0.19.0",
-    "webpack": "^3.10.0",
-    "nodemon": "^1.17.5"
+    "webpack": "^3.10.0"
   },
   "dependencies": {
     "express": "^4.16.3",
